# coursework_3

./: README.md  pyproject.toml
tests/: test_class_functions.py
utils/: class_functions.py  main.py  operations.json
