[tool.poetry]
name = "coursework-3"
version = "0.1.0"
description = ""
authors = ["tasyasoni <tasyasoni1@gmail.com>"]
readme = "README.md"
packages = [{include = "coursework_3"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
